--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
 {cover_enabled, true}.
 
 {deps, [
-  {lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
+  {lager, "3.9.2"},
   {cowboy, "1.0.*", {git, "git://github.com/ninenines/cowboy.git", {tag, "1.0.1"}}},
   {recon, ".*", {git, "git://github.com/ferd/recon.git",{tag,"2.2.1"}}},
   {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {tag, "v2.6.0"}}}
