--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
 
 {deps, [
   {lager, "3.9.2"},
-  {cowboy, "1.0.*", {git, "git://github.com/ninenines/cowboy.git", {tag, "1.0.1"}}},
-  {recon, ".*", {git, "git://github.com/ferd/recon.git",{tag,"2.2.1"}}},
-  {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {tag, "v2.6.0"}}}
+  {cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "1.0.1"}}},
+  {recon, {git, "https://github.com/ferd/recon",{tag,"2.2.1"}}},
+  {jsx, {git, "https://github.com/talentdeficit/jsx", {tag, "v2.6.0"}}}
 ]}.
