--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
 
 {deps, [
   {lager, "3.9.2"},
-  {cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "1.0.1"}}},
-  {recon, {git, "https://github.com/ferd/recon",{tag,"2.2.1"}}},
-  {jsx, {git, "https://github.com/talentdeficit/jsx", {tag, "v2.6.0"}}}
+  {cowboy, "1.0.1"},
+  {recon, "2.2.1"},
+  {jsx, "2.6.0"}
 ]}.
